@@ -90,5 +90,7 @@ t/test50-disable.rdt
 t/test50-disable.x
 t/test60-subname.p
 t/test60-subname.rdt
+t/test80-recurs.p
+t/test80-recurs.rdt
 t/test90-stress.p
 typemap
